Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- A dollar had fallen away in an action.
- The recurrence upgrade removed the new attribute as well as the old.
- In french Locale, date and month got flipped when type was changed.
- Mantis bug #896 and #940 fixed.
- A button was not translated (#783).
- with workgroups calendars, starting meetings always added the site
  manager instead of the user as a default attendee.
- Edit access now depends on the Modify Portal Content permission.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-